token-validation-spring-test: add autoconfig and tests for mock-oauth2-server * deprecate token-validation-test-support